prior block breaker work upgraded to Unity 5.3

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,9 @@ ExportedObj/
 # Unity3D generated meta files
 *.pidb.meta
 
+# Unity rubbish
+*.meta
+*.cs~
+
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
